<resources>
    <string name="app_name">Stackoverflow</string>

    <string name="reputation">Reputation:</string>
    <string name="navigation_drawer_header_content_description">Navigation drawer header logo</string>
    <string name="navigation_drawer_header_title" translatable="false">FOSSIL@DUYNGUYEN</string>
    <string name="menu_title_user_list">Stackoverflow Users</string>
    <string name="menu_title_setting">Setting</string>
    <string name="location">Location:</string>
    <string name="last_access_date">Last access date:</string>
    <string name="menu_title_user_detail_list">User Details</string>
    <string name="repo_history_type">"Repository history type: "</string>
    <string name="reputation_change">"Repository change: "</string>
    <string name="creation_date">"Creation date: "</string>
    <string name="post_id">"Post Id: "</string>
    <string name="bookmark">Bookmark</string>
    <string name="deBookmark">De-Bookmark</string>
    <string name="display_switch">Enable display only bookmarked users</string>
</resources>
