<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userDetail"
            type="com.fossil.duy.stackoverflow.userdetail.models.UserDetailEntity" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_6"
        android:padding="@dimen/dp_10"
        app:cardBackgroundColor="@color/user_item">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/repo_history_type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@{userDetail.reputation_history_type}"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/userName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/reputationLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/reputation_change"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userName" />

            <TextView
                android:id="@+id/reputation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@{userDetail.reputation_change.toString()}"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/reputationLabel"
                app:layout_constraintTop_toBottomOf="@id/userName" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/creation_date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reputationLabel" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:creationDate="@{userDetail.creation_date}"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/reputation" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/post_id"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@{userDetail.post_id.toString()}"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>