<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="user"
            type="com.fossil.duy.stackoverflow.users.models.UserDomain" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardBackgroundColor="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/userProfileImage"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:importantForAccessibility="no"
                app:imageFromUrl="@{user.profileImageUrl}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_empty_set" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/userProfileImage"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@{user.name}" />

            <TextView
                android:id="@+id/reputationLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/reputation"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@id/userName" />

            <TextView
                android:id="@+id/reputation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toEndOf="@id/reputationLabel"
                app:layout_constraintTop_toBottomOf="@id/userName"
                tools:text="@{Long.toString(user.reputation)}" />

            <ImageView
                android:id="@+id/heartImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_heart_red"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/location"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/reputationLabel" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:text="@{user.location}"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/reputation" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:text="@string/last_access_date"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                app:date="@{user.lastAccessDate}"
                android:textSize="@dimen/sp_12"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>