<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userDetailViewModel"
            type="com.fossil.duy.stackoverflow.userdetail.viewmodels.UserDetailViewModel" />
    </data>

    <FrameLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardBackgroundColor="@color/colorPrimaryDark">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/userProfileImage"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:importantForAccessibility="no"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/ic_empty_set" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/userProfileImage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/reputationLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/reputation"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_12"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/userProfileImage"
                        app:layout_constraintTop_toBottomOf="@id/userName" />

                    <TextView
                        android:id="@+id/reputation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@android:color/white"
                        app:layout_constraintStart_toEndOf="@id/reputationLabel"
                        app:layout_constraintTop_toBottomOf="@id/userName" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/location"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                        app:layout_constraintTop_toBottomOf="@+id/reputationLabel" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_12"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/reputation" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold"
                        android:text="@string/last_access_date"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_12"
                        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/lastAccess"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@android:color/white"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/location" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bookMarkBtn"
                        style="@style/Widget.MaterialComponents.Button.BookMark"
                        android:background="@color/colorPrimaryDark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:layout_marginTop="@dimen/dp_5"
                        android:layout_marginBottom="@dimen/dp_5"
                        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:context=".MainActivity"
                tools:listitem="@layout/user_detail_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</layout>
